# trading-algo-research

./: .env.example  PROJECT_DEMONSTRATION_SUMMARY.md  README.md  demo.py  proposal.md  pyproject.toml  research_paper.md  research_paper_enhanced.md  research_report.md  research_report.tex  tmp.py  todo.md
.cursor/: mcp.json
data/processed/: btc_combined.csv  btc_with_indicators.csv
data/raw/: btc_daily_ohlcv.csv  btc_onchain_metrics.csv  crypto_news_sentiment.csv
models/baseline_cnn_lstm/: best_model_checkpoint.pth  test_metrics.json  test_predictions.csv  training_history.json
models/improved_attention/: best_model_checkpoint.pth  test_metrics.json  test_predictions.csv  training_history.json
models/original_attention/: best_model_checkpoint.pth  test_metrics.json  test_predictions.csv  training_history.json
notebooks/: 02_cnn_lstm.ipynb  03_cnn_lstm_with_attention.ipynb  bitcoin_predictions_20250629_222546.csv  bitcoin_predictions_20250629_232946.csv  demo.ipynb
notebooks/bitcoin_models/: best_model_checkpoint.pth
sandbox/: generate_visuals.py  presentation_outline.md  research_paper.md  video_script.md
src/data_collection/: market_api.py  on_chain_api.py
src/evaluation/: metrics.py
src/features/: technical_features.py
src/models/: cnn_lstm.py  cnn_lstm_with_attention.py  improved_cnn_lstm_attention.py
src/preprocessing/: dataset_builder.py
src/processing/: pipeline.py
src/training/: trainer.py
tryouts/: create_executive_summary.py  create_interactive_demo.py  create_project_visuals.py
